--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -24,3 +24,21 @@ a {
   color: aquamarine;
   font-size: 16px;
 }
+
+footer {
+  text-align: right;
+  color: gray;
+  font-size: 21px;
+}
+
+video {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
